[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:weighted_bert/__init__.py]

[metadata]
name = weighted_bert
author = Emrecan Celik
author_email = emrecncelik@gmail.com
description = Nonofficial implementation of the paper A Text Document Clustering Method Based on Weighted BERT Model.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emrecncelik/weighted-bert
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
	attrs==21.2.0
	black==21.11b1
	certifi==2021.10.8
	charset-normalizer==2.0.7
	click==8.0.3
	filelock==3.4.0
	huggingface-hub==0.1.2
	idna==3.3
	iniconfig==1.1.1
	joblib==1.1.0
	mypy-extensions==0.4.3
	nltk==3.6.6
	numpy==1.21.4
	packaging==21.3
	pathspec==0.9.0
	Pillow==9.0.1
	platformdirs==2.4.0
	pluggy==1.0.0
	py==1.11.0
	pyparsing==3.0.6
	pytest==6.2.5
	PyYAML==6.0
	regex==2021.11.10
	requests==2.26.0
	sacremoses==0.0.46
	scikit-learn==1.0.1
	scipy==1.7.2
	sentence-transformers==2.1.0
	sentencepiece==0.1.96
	six==1.16.0
	threadpoolctl==3.0.0
	tokenizers==0.10.3
	toml==0.10.2
	tomli==1.2.2
	torch==1.10.0
	torchvision==0.11.1
	tqdm==4.62.3
	transformers==4.12.5
	typing-extensions==4.0.0
	urllib3==1.26.7
